--- a/My info.html
+++ b/My info.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
+
   <body>
     <h1>My Contact Details</h1>
     <h3>My Email Address</h3>
@@ -14,7 +16,7 @@
       <input type="text" name="your name" value=""><br>
       <label>Your Email:</label>
       <input type="email" name="your email" value=""><br>
-      <label>Your Message:</label>
+      <label>Your Message:</label><br>
       <textarea name="your message" rows="10" cols="30"></textarea><br>
       <input type="submit" name="" value="">
     </form>
