--- a/index.html
+++ b/index.html
@@ -3,48 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Haru's Personal Site</title>
+    <link rel="stylesheet" href="CSS\styles.css">
   </head>
+
+
   <body>
-    <table>
+    <table cellspacing="20">
       <tr>
         <td><img src="images/김현수.jpg" alt=""></td>
         <td>
           <h1>Haru</h1>
           <h3>Sound Designer</h3>
-          <em><strong><a href="https://www.youtube.com/channel/UCpTWpeWE8yM5Q3SUUkETfjQ">Go to Youtube Channel</a></strong></em>
-          <em><strong><a href="My info.html">Contact Me</a></strong></em>
+          <p><em><strong><a href="https://www.youtube.com/channel/UCpTWpeWE8yM5Q3SUUkETfjQ">Go to Youtube Channel</a></strong></em></p>
+          <p><em><strong><a href="My info.html">Contact Me</a></strong></em></p>
         </td>
       </tr>
     </table>
     <hr>
-    <h3>Available Tools</h3>
+    <h3>Career</h3>
+    <hr>
+    <h3>Skills</h3>
     <table>
       <tr>
-        <td>
-          <p>Protools</p>
-          <p>Logic Pro X</p>
-          <p>Cubase</p>
-        </td>
-        <td>
-          <p>★★★★★</p>
-          <p>★★★★★</p>
-          <p>★★★☆☆</p>
-        </td>
+        <td>Protools</td>
+        <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>
-          <p>Enreal Engine</p>
-          <p>Unity</p>
-          <p>WebDevelope</p>
-          <p>Python</p>
-        </td>
-        <td>
-          <p>★★☆☆☆</p>
-          <p>★☆☆☆☆</p>
-          <p>★☆☆☆☆</p>
-          <p>☆☆☆☆☆</p>
-        </td>
+        <td>Logic Pro X</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Cubase 10</td>
+        <td>⭐⭐⭐</td>
       </tr>
     </table>
+
+
+
+
   </body>
 </html>
