--- a/index.html
+++ b/index.html
@@ -2,43 +2,65 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Haru's Personal Site</title>
-    <link rel="stylesheet" href="CSS\styles.css">
-  </head>
-
-
+    <title>HyeonSu Kim</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="css/haru.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@500&family=Sacramento&display=swap" rel="stylesheet">
+    </head>
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="images/김현수.jpg" alt=""></td>
-        <td>
-          <h1>Haru</h1>
-          <h3>Sound Designer</h3>
-          <p><em><strong><a href="https://www.youtube.com/channel/UCpTWpeWE8yM5Q3SUUkETfjQ">Go to Youtube Channel</a></strong></em></p>
-          <p><em><strong><a href="My info.html">Contact Me</a></strong></em></p>
-        </td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Career</h3>
-    <hr>
-    <h3>Skills</h3>
-    <table>
-      <tr>
-        <td>Protools</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Logic Pro X</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Cubase 10</td>
-        <td>⭐⭐⭐</td>
-      </tr>
-    </table>
+
+    <div class="top-container">
+      <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+      <h1>I'm HyeonSu.</h1>
+      <p class="introduce"> a <span class="int1">sound designer</span> and <span class="int1">programer</span>.</p>
+      <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+
+    <div class="middle-container">
+      <div class="profile">
+        <img src="css/haru.ico" alt="">
+        <h2>Hello.</h2>
+        <p class="intro">I am a sound designer and web developer.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="sound-img" src="images/Haru.png" alt="">
+          <h3>Sound Design</h3>
+          <p>Protools</p>
+          <p>Recording, PostProduction, SoundReinforcement</p>
+        </div>
+        <div class="skill-row">
+          <img class="composer-img" src="images/Composer.png" alt="">
+          <h3>Compose</h3>
+          <p>Logic Pro X, Cubase 10</p>
+        </div>
+        <div class="skill-row">
+          <img class="dev-img" src="images/WebDeveloper.png" alt="">
+          <h3>Web Develope</h3>
+          <p>HTML, CSS, JAVAScript</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="haru.info.official@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.youtube.com/channel/UCpTWpeWE8yM5Q3SUUkETfjQ">Youtube</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copylight">© 2021 Haru's Website.</p>
+    </div>
 
 
   </body>
