--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <h3>Follow your own star</h3>
+        <p class="contact-message">Start where you are. Use What you have. Do what you can.</p>
         <a class="btn" href="haru.info.official@gmail.com">CONTACT ME</a>
       </div>
     </div>
